# SemanticPrism

./: .gitignore  README.md  SemanticPrism_Demo.ipynb  config.yaml  default_workflow.py  diagnostic_workflow.ipynb  diagnostic_workflow.py  master_workflow.ipynb  master_workflow3.ipynb  master_workflow_Base.py  payload.txt  pyproject.toml  requirements.txt  run_pipeline.py  test_inference.py  update_notebooks.py
archive/: SemanticPrism_Demo-Copy1.ipynb  SemanticPrism_Demo.ipynb
docs/: 00_welcome.md  01_overall_summary.md  02_module_instructions.md  03_build_steps.md  04_prompts_reference.md  detailed_method_trace.md  workflow_documentation.md
inputs/testdocs/: doc1.txt  doc2.txt  doc3.txt
src/core/: chunking.py  llm_client.py  logger.py
src/embedding/: embedding.py
src/extraction/: extractor.py  normalize_text.py  prompts.py  schemas.py
src/helpers/: context_manager.py  visualizer.py
src/llm/: llm_client.py  local_llm.py  model_profiles.py  public_llm.py
src/nlp/: hypernyms.py  nlp_mapping.py  prompts.py  schemas.py
src/orchestrator/: pipeline.py
src/synthesis/: prompts.py  schemas.py  synthesizer.py
src/topology/: graph_builder.py
tests/: testendpoint.py
