[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semanticprism"
version = "0.1.0"
description = "SemanticPrism: Rigorous Knowledge Graph Ontology Extraction Pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "instructor",
    "litellm",
    "ollama",
    "openai",
    "pydantic>=2.0",
    "sentence-transformers",
    "scikit-learn",
    "numpy",
    "networkx",
    "igraph",
    "leidenalg",
    "pyvis",
    "pyyaml",
    "nest-asyncio"
]

[project.optional-dependencies]
vertex = [
    "google-genai",
    "google-cloud-aiplatform",
    "google-auth",
    "jsonref"
]
